feat: add top up button
